Fixing Scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -61,25 +61,21 @@ body {
 @layer utilities {
   /* Scroll thumb styles */
   .scrollbar::-webkit-scrollbar {
-    @apply w-[0.2rem];
+    @apply w-[0.5rem];
   }
   .scrollbar::-webkit-scrollbar-thumb {
-    @apply rounded-lg bg-slate-200;
+    @apply rounded-lg bg-indigo-800;
   }
   .scrollbar::-webkit-scrollbar-thumb:active {
-    @apply bg-slate-300;
+    @apply bg-slate-800;
   }
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    @apply bg-slate-300;
+    @apply bg-indigo-900;
   }
 
   /* Scroll track styles (Background) */
   .scrollbar::-webkit-scrollbar-track {
-    @apply bg-slate-100;
-  }
-  .scrollbar::-webkit-scrollbar-track:hover,
-  .scrollbar::-webkit-scrollbar-track:active {
-    @apply bg-slate-100;
+    @apply bg-slate-900;
   }
 
   // .rhap_time {
